# python_os

./: BUILDING.md  Cargo.toml  README.md  TODO.md  build.sh  debug.sh  qemu.sh  run_release.sh  rust-toolchain  x86_64-blog_os.json
.cargo/: config.toml
src/: ata.rs  atomics.rs  main.rs  vga_buffer.rs
